correction z-index

--- a/Oniti/Docga/ConnectorBundle/Resources/public/css/docga-modal.css
+++ b/Oniti/Docga/ConnectorBundle/Resources/public/css/docga-modal.css
@@ -1,7 +1,7 @@
 .docga_modal {
     display: none;
     position: fixed;
-    z-index: 1000;
+    z-index: 1001;
     left: 0;
     top: 0;
     width: 100%;
